# Depthwise_test_gpu

./: README.md
Ablation/EfficientNetB0/: DCU_EfficientnetAblation.py  DCU_EfficientnetAblation_Result.xlsx  OriginalDepthwiseLayer.py
Ablation/MNasNet/: DCU_MnasnetAblation.py  DCU_MnasnetAblation_Result.xlsx
Ablation/MobileNetV2/: DCU_MobilenetAblation.py  DCU_MobilenetAblation_Result.xlsx  OptimizedDepthwiseLayer.py  OptimizedPointwiseLayer.py
Ablation/ShuffleNetV2/: DCU_ShufflenetAblation.py  DCU_ShufflenetAblation_Result.xlsx  OriginalPointwiseLayer.py
Ablation/TVM/Depthwise/: Depthwise_TVM_default.py  Depthwise_TVM_default_Result.xlsx  Depthwise_TVM_tuning.py
Ablation/TVM/Pointwise/: Pointwise_TVM_default.py  Pointwise_TVM_default_Result.xlsx  Pointwise_TVM_tuned.py
Depthwise/Extension/DCU_Depthwise_Extension/: DCU_Depthwise.cpp  DCU_Depthwise_Kernel.hip  DCU_Depthwise_Kernel_hip.hip  (+29 more)
Depthwise/Kernel/: CMakeLists.txt  DCU_Depthwise_CacheHit_Result.xlsx  DCU_Depthwise_Kernel.cpp  DCU_Depthwise_Kernel_Result.xlsx  Filter3x3_Input112x112_Stride1.h  Filter3x3_Input112x112_Stride2.h  Filter3x3_Input14x14_Stride1.h  Filter3x3_Input14x14_Stride2.h  Filter3x3_Input28x28_Stride1.h  Filter3x3_Input28x28_Stride2.h  Filter3x3_Input56x56_Stride1.h  Filter3x3_Input56x56_Stride2.h  Filter3x3_Input7x7_Stride1.h  Filter5x5_Input14x14_Stride1.h  Filter5x5_Input14x14_Stride2.h  Filter5x5_Input28x28_Stride1.h  Filter5x5_Input56x56_Stride2.h  Filter5x5_Input7x7_Stride1.h  GPU_Depthwise_Kernel.cpp  TestDepthwiseHitRate.py  TestDepthwiseKernel.py  run.sbatch  warmup.h
(+2 files in other folders)
